on mobile devices, fix for incorrect display of the chat page

--- a/src/pages/chat/ChatForm/ChatForm.module.scss
+++ b/src/pages/chat/ChatForm/ChatForm.module.scss
@@ -6,7 +6,7 @@
     padding-left: 10px;
     padding-top: 20px;
     @media (max-width: 767px){
-        padding-top: 0px;
+        padding-top: 15px;////////////////////
     }
     @media (max-width: 440px){
         padding-left: 15px;
