--- a/src/pages/chat/Messages/Messahes.module.scss
+++ b/src/pages/chat/Messages/Messahes.module.scss
@@ -13,11 +13,11 @@
     @media (max-width: 992px){
         max-height: 690px;
     }
-    @media (max-width: 420px){
-        max-height: 660px;
-    }
     @media (max-width: 767px){
         padding-right: 20px;
+    }
+    @media (max-width: 420px){
+        max-height: 610px;
     }
     @media (max-width: 391px){
         max-height: 600px;
